--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Will you be my Valentine?</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="card">
+      <h1 class="title">Hi love! Will you be my Valentine?</h1>
+      <div class="heart">
+        <img src="images/cat-01.gif" alt="Valentine" class="cat img-fluid" />
+      </div>
+      <div class="text"></div>
+      <button class="button">YES</button>
+      <button class="button button__negative">NO</button>
+      <button class="button button__error">Error, we need to restart</button>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
