--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="card">
-      <h1 class="title">Hi love! Will you be my Valentine?</h1>
-      <div class="heart">
-        <img src="images/cat-01.gif" alt="Valentine" class="cat img-fluid" />
+    <div class="valentine-card">
+      <h1 class="valentine-title">Hi love! Will you be my Valentine?</h1>
+      <div class="valentine-heart">
+        <img
+          src="images/cat-01.gif"
+          alt="Valentine"
+          class="valentine-image img-fluid"
+        />
       </div>
-      <div class="text"></div>
-      <button class="button">YES</button>
-      <button class="button button__negative">NO</button>
-      <button class="button button__error">Error, we need to restart</button>
+      <div class="valentine-text"></div>
+      <button class="valentine-button yes-button">YES</button>
+      <button class="valentine-button no-button">NO</button>
+      <button class="valentine-button error-button">Let's do it again.</button>
     </div>
     <script src="script.js"></script>
   </body>
